--- a/clang-tools-extra/instrumenter/CMakeLists.txt
+++ b/clang-tools-extra/instrumenter/CMakeLists.txt
@@ -14,11 +14,18 @@ clang_target_link_libraries(clangAAInstrumenter
   PRIVATE
   clangAST
   clangASTMatchers
+  clangRewrite
   clangBasic
   clangIndex
+  clangTransformer
   clangLex
   clangSerialization
   clangToolingCore
+  clangAnalysis
+  clangFormat
+  clangFrontend
+  clangSema
+  clangTooling
   )
 
 add_subdirectory(tool)
