--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+llvm/bsc/stderr.log
+llvm/bsc/stdout.log
+
 #==============================================================================#
 # This file specifies intentionally untracked files that git should ignore.
 # See: http://www.kernel.org/pub/software/scm/git/docs/gitignore.html
